--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,5 +1,5 @@
-title:  "Millennial"
-tagline: "a Jekyll theme"
+title:  "MCG"
+tagline: "Melina Carmona Gómez"
 description:
 author:
   name: "Paul Le"
@@ -14,10 +14,10 @@ menu:
 - {name: 'Contact', file: 'contact.html'}
 
 social:
-- {icon: 'twitter', link: 'https://twitter.com/paululele'}
-- {icon: 'facebook', link: 'https://www.facebook.com/Le.Paul.94'}
-- {icon: 'instagram', link: 'https://instagram.com/paululele'}
-- {icon: 'linkedin', link: 'https://linkedin.com/in/lenpaul'}
-- {icon: 'envelope', link: 'mailto:l.nguyen.paul@gmail.com'}
+- {icon: 'twitter', link: 'https://twitter.com/melinacarmonag'}
+- {icon: 'facebook', link: 'https://www.facebook.com/melinacarmonag'}
+- {icon: 'instagram', link: 'https://instagram.com/melinnacarmona'}
+# - {icon: 'linkedin', link: 'https://linkedin.com/in/lenpaul'}
+- {icon: 'envelope', link: 'mailto:arq.melinacarmonag@gmail.com'}
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
