--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -2,8 +2,8 @@ title:  "MCG"
 tagline: "Melina Carmona Gómez"
 description:
 author:
-  name: "Paul Le"
-  twitter: paululele
+  name: "Melina"
+  twitter: melinacarmonag
 
 menu:
 - {name: 'Interesting Facts', file: 'facts.html'}
