--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -9,7 +9,7 @@ menu:
 - {name: 'Interesting Facts', file: 'facts.html'}
 - {name: 'Learning Resources', file: 'resources.html'}
 - {name: 'Sample Posts', file: 'sample-posts.html'}
-- {name: 'Documentation', file: 'documentation.html'}
+# - {name: 'Documentation', file: 'documentation.html'}
 - {name: 'About', file: 'about.html'}
 - {name: 'Contacto', file: 'contact.html'}
 
@@ -17,7 +17,6 @@ social:
 - {icon: 'twitter', link: 'https://twitter.com/melinacarmonag'}
 - {icon: 'facebook', link: 'https://www.facebook.com/melinacarmonag'}
 - {icon: 'instagram', link: 'https://instagram.com/melinnacarmona'}
-# - {icon: 'linkedin', link: 'https://linkedin.com/in/lenpaul'}
 - {icon: 'envelope', link: 'mailto:arq.melinacarmonag@gmail.com'}
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
