--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -9,9 +9,9 @@ menu:
 - {name: 'Interesting Facts', file: 'facts.html'}
 - {name: 'Learning Resources', file: 'resources.html'}
 - {name: 'Sample Posts', file: 'sample-posts.html'}
-# - {name: 'Documentation', file: 'documentation.html'}
+ - {name: 'Documentation', file: 'documentation.html'}
 - {name: 'About', file: 'about.html'}
-- {name: 'Contacto', file: 'contact.html'}
+# - {name: 'Contacto', file: 'contact.html'}
 
 social:
 - {icon: 'twitter', link: 'https://twitter.com/melinacarmonag'}
