--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -7,10 +7,10 @@ description:
 
 menu:
 - {name: 'Interesting Facts', file: 'facts.html'}
-- {name: 'Learning Resources', file: 'resources.html'}
-- {name: 'Sample Posts', file: 'sample-posts.html'}
+- {name: 'Fotografía', file: 'resources.html'}
+- {name: 'Proyectos', file: 'sample-posts.html'}
 - {name: 'Documentation', file: 'documentation.html'}
-- {name: 'About', file: 'about.html'}
+- {name: 'Sobre mí', file: 'about.html'}
 # - {name: 'Contacto', file: 'contact.html'}
 
 social:
