--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -9,7 +9,7 @@ menu:
 - {name: 'Interesting Facts', file: 'facts.html'}
 - {name: 'Fotografía', file: 'resources.html'}
 - {name: 'Proyectos', file: 'sample-posts.html'}
-- {name: 'Documentation', file: 'documentation.html'}
+- {name: 'Concursos', file: 'documentation.html'}
 - {name: 'Sobre mí', file: 'sobremi.html'}
 
 social:
